fix(confil): notes for fake credentials

--- a/.env.config
+++ b/.env.config
@@ -7,5 +7,5 @@ MONGO_USERNAME=dbKeeper
 MONGO_PASSWORD=dbKeeperPassword
 MONGO_DATABASE=uploader
 
-S3_ID=AKIAZNZ54CBYATVWXMNA
-s3_KEY=abpXbuvHgbyz8l0ZatSCWEu0qgLwE6gI9VrXYLyI
+S3_ID= e.g. :: AKIAZNZ54CBYATVWXMNA-fake-id
+s3_KEY= e.g. :: abpXbuvHgbyz8l0ZatSCWEu0qgLwE6gI9VrXYLyI-fake-key
