--- a/services/api-server/package.json
+++ b/services/api-server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "aws-sdk": "^2.610.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.3.1",
     "http-errors": "^1.7.3",
