feat(upload): cache data for upload req

--- a/.env.config
+++ b/.env.config
@@ -7,5 +7,7 @@ MONGO_USERNAME=dbKeeper
 MONGO_PASSWORD=dbKeeperPassword
 MONGO_DATABASE=uploader
 
+REDIS_SERVER_PORT=6379
+
 S3_ID= e.g. :: AKIAZNZ54CBYATVWXMNA-fake-id
 s3_KEY= e.g. :: abpXbuvHgbyz8l0ZatSCWEu0qgLwE6gI9VrXYLyI-fake-key
