--- a/services/api-server/package.json
+++ b/services/api-server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.3.1",
     "http-errors": "^1.7.3",
+    "ioredis": "^4.14.1",
     "mongoose": "^5.8.10"
   },
   "devDependencies": {
