WIP(persistUserUpload): mongo replicator

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,12 @@ services:
       - ${REDIS_SERVER_PORT}
     networks:
       - uploader
-  mongo:
+    restart: always
+  mongo-primary:
+    hostname: mongo-primary
     image: mongo:4
+    command: --replSet rs0 --bind_ip_all
+    restart: always
     expose:
       - ${MONGO_SERVER_PORT}
     ports:
@@ -24,8 +28,43 @@ services:
       - db-data:/var/lib/mongo/data
     networks:
       - uploader
-    logging:
-      driver: none
+    restart: always
+    # logging:
+    #   driver: none
+  mongo-secondary:
+    hostname: mongo-secondary
+    image: mongo:4
+    command: --replSet rs0 --bind_ip_all
+    restart: always
+    expose:
+      - ${MONGO_SERVER_PORT_REPLICA}
+    ports:
+      - ${MONGO_SERVER_PORT_REPLICA}:27017
+    environment:
+      - MONGO_SERVER_PORT_REPLICA=${MONGO_SERVER_PORT_REPLICA}
+      - MONGO_USERNAME=${MONGO_USER}
+      - MONGO_PASSWORD=${MONGO_PASSWORD}
+      - MONGO_DATABASE=${MONGO_DATABASE}
+    volumes:
+      - db-data:/var/lib/mongo/data
+    depends_on:
+      - mongo-primary
+    networks:
+      - uploader
+    restart: always
+    # logging:
+    #   driver: none
+  mongo-setup:
+    image: mongo:4
+    depends_on:
+      - mongo-primary
+      - mongo-secondary
+    volumes:
+      - ./services/api-server/replicator:/replicator
+    networks:
+      - uploader
+    restart: "no"
+    entrypoint: [ "bash", "/replicator/replicate.sh"]
   api-server:
     image: node:12
     working_dir: /usr/src/api-server
@@ -34,6 +73,8 @@ services:
       - REDIS_SERVER_PORT=${REDIS_SERVER_PORT}
       - MONGO_SERVER_HOST=${MONGO_SERVER_HOST}
       - MONGO_SERVER_PORT=${MONGO_SERVER_PORT}
+      - MONGO_SERVER_HOST_REPLICA=${MONGO_SERVER_HOST_REPLICA}
+      - MONGO_SERVER_PORT_REPLICA=${MONGO_SERVER_PORT_REPLICA}
       - MONGO_USERNAME=${MONGO_USERNAME}
       - MONGO_PASSWORD=${MONGO_PASSWORD}
       - MONGO_DATABASE=${MONGO_DATABASE}
@@ -46,7 +87,8 @@ services:
     volumes:
       - ./services/api-server:/usr/src/api-server
     depends_on:
-      - mongo
+      - mongo-primary
+      - mongo-secondary
       - redis
     networks:
       - uploader
