feat(UI-UploadCases): presentation + api

--- a/.env.config
+++ b/.env.config
@@ -1,8 +1,10 @@
 CLIENT_UI_PORT=3000
 API_SERVER_PORT=4000
 
-MONGO_SERVER_HOST=mongo
+MONGO_SERVER_HOST=mongo-primary
 MONGO_SERVER_PORT=27020
+MONGO_SERVER_HOST_REPLICA=mongo-secondary
+MONGO_SERVER_PORT_REPLICA=27021
 MONGO_USERNAME=dbKeeper
 MONGO_PASSWORD=dbKeeperPassword
 MONGO_DATABASE=uploader
