--- a/services/api-server/package.json
+++ b/services/api-server/package.json
@@ -11,6 +11,7 @@
   "author": "Dmytro Ovchynnykov",
   "license": "MIT",
   "dependencies": {
+    "ajv": "^6.11.0",
     "aws-sdk": "^2.610.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
